# longtime

./: .gitignore  CMakeLists.txt
include/glad/: gl.h
notes/ai_learning/: learning.md
notes/opengl/: learning-notes.md  ndc.md
src/: main.cpp
